# VINS_BASTIAN

./: CMakeLists.txt  README.md
Arm/: PCA9685.md  control_arm.py  test_arm.py
IMU/: Allan.m  CMakeLists.txt  IMU_Allan_Calibration.ipynb  demo.cc  demo_bckp.cc  manifest.xml
IMU/Ros/: ros_pub.c
IMU/matlab/: mine.m
IMU/matlab/functions/: allan_variance.m  filter_data.m  gen_chart.m  gen_chart_average.m
config/: euroc_config_short.yaml
config/Rs/: calibration.json  realsense.md  realsense_config_short.yaml  rs-imu-calibration.py
include/: System.h  estimator.h  feature_manager.h  feature_tracker.h  parameters.h
include/backend/: edge.h  edge_imu.h  edge_mapfusion.h  edge_prior.h  edge_reprojection.h  eigen_types.h  problem.h  vertex.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.h  vertex_scale.h  vertex_speedbias.h
include/factor/: integration_base.h
include/initial/: initial_alignment.h  initial_ex_rotation.h
include/utility/: utility.h
python/: RUn time analysis.ipynb
src/: System.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  parameters.cpp
src/backend/: edge.cc  edge_imu.cc  edge_reprojection.cc  problem.cc  vertex.cc
src/initial/: initial_aligment.cpp
src/utility/: utility.cpp
test/: CurveFitting.cpp  PointcloudMerge.cpp  TestCpp.cc  run_camera_imu.cc  run_deepmirror.cpp  run_euroc.cpp
